[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "tuftestyledgraphs"
version = "0.1.0"
description = "Matplotlib graphs using styles inspired by Tufte's principles in 'The Visual Display of Quantitative Information'"
authors = ["Warner Leijenaar <git@renraw.nl>"]
readme = "README.md"
packages = [
  {include = "tuftestyledgraphs", from = "src"},
  {include = "tuftestyledgraphs/py.typed", from = "src"},
]


[tool.poetry.urls]
"Homepage" = "https://github.com/renraw-nl/tuftestyledgraphs"


[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1"
pre-commit = "^3.0"
interrogate = "^1.0"


[tool.poetry.group.test.dependencies]
hypothesis = "^6.96"
pytest = "^7.4"
pytest-mock = "^3.12"


[tool.poetry.group.jupiter.dependencies]
jupyterlab = "^4.0"
pandas = "^1.0"
watermark = "^2.0"
pyarrow = "^15.0"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"


[tool.pytest.ini_options]
# asyncio_mode = "auto"
# addopts = "--no-cov-on-fail --showlocals --strict-markers"
addopts = "--showlocals --strict-markers"
testpaths = ["tests"]
norecursedirs = "_build var* .*cache .vscode .venv"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "utils",
]


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["docs", "build", ".venv", "var", ".*_cache"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
# generate-badge = "."
# badge-format = "svg"


[tool.ruff]
select = ["E", "F"]
ignore = []
line-length = 79
target-version = "py312"

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Note: Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
src = ["src", "tests"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".pytest_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".vscode",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "var",
    "venv",
]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 70

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

# [tool.ruff.lint.isort]
# known-first-party = ["my_module1", "my_module2"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".


# pymarkdownlnt configuration (yes both are correct
# ref. https://github.com/jackdewinter/pymarkdown/blob/main/docs/advanced_configuration.md#alternate-project-configuration-files
[tool.pymarkdown]
log = {level = "WARNING", stack-trace = false}

[tool.pymarkdown.extensions]
markdown-disallow-raw-html = {enabled = true}
front-matter = {enabled = true}
# markdown-task-list-items = {enabled = true}

[tool.pymarkdown.plugins]
# Enabled rules, with some configuration
emphasis-style = {enabled = true, style = "underscore"}
heading-style = {enabled = true, style = "atx"}
ul-indent = {enabled = true, indent = 4}

# disabled rules
code-block-style = {enabled = false}
fenced-code-language = {enabled = false}
line-length = {enabled = false}
no-blanks-blockquote = {enabled = false}
no-duplicate-header = {enabled = false}
ol-prefix = {enabled = false}
single-h1 = {enabled = false}
